# fast-service

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  test.py
apis/: __init__.py  dependencies.py
apis/graphql/: __init__.py
apis/http/: __init__.py
apis/http/apps/outer/: __init__.py
apis/http/apps/outer/v1/: __init__.py
apis/http/apps/outer/v1/ping/: views.py
apis/http/curd/: __init__.py
apis/http/routes/v1/: __init__.py
apis/http/routes/v1/account/: pydntic_model.py  schemas.py  views.py
apis/http/routes/v1/auth/: views.py
apis/http/routes/v1/common/: responses.py  views.py
apis/rpc/: __init__.py
apis/rpc/hello/: client.py  hello.proto  hello_pb2.py  hello_pb2_grpc.py  server.py
apis/websocket/: __init__.py  manage.py
apis/websocket/routes/: hello.py  ticks.py
common/: __init__.py  cbv.py  context.py  decorators.py  encrypt.py  enums.py  exceptions.py  fastapi.py  loguru.py  pydantic.py  regexes.py  responses.py  schemas.py  signed_request.py  types.py  utils.py
common/command/: __init__.py  mysql.py  shell.py  tools.py
common/constant/: messages.py  tags.py
conf/: config.py
conf/content/: consul_template.json  default_template.json  development.json
core/: __init__.py  factory.py  loguru.py  middlewares.py
deploy/docker/: .dockerignore  back-end-base.Dockerfile  back-end.Dockerfile
deploy/microService/: base-compose.yml
entrypoint/: main.py
extensions/: __init__.py
extensions/cpp/eval/: Makefile  README.md  __init__.py  literal_eval.cpp  literal_eval.py  literal_eval_benchmark.py  literal_eval_gen_bench_data.py  literal_eval_test.py
releases/initial/: README.md
scripts/: __init__.py
scripts/permission/: update_perm_code.py
startEntry/: main.py  rpc.py
storages/: __init__.py  enums.py
storages/redis/: __init__.py  keys.py  utils.py
storages/redis/models/: __init__.py  vehicle.py
storages/relational/curd/: account.py  resource.py
storages/relational/migrate/: env.py
storages/relational/migrate/versions/master/: 0_20230328192341_init.py  0_20230427160304_init.py
storages/relational/models/: __init__.py  account.py  base.py  task.py
storages/relational/pydantic/: account.py  permission.py  resource.py  role.py  system.py
tasks/: __init__.py
tasks/asynchronous/: entry.py  test.py
tests/: __init__.py  conftest.py  test_main.py
tests/http/: test_account.py  test_root.py
tests/unit/: test_common_utils.py
tests/unit/common/: test_decorators.py  test_encrypt.py  test_utils.py
tests/unit/component/rsa/: rsa_private.pfx  rsa_pub.pem
third_apis/: __init__.py
third_apis/k8s/: __init__.py
third_apis/k8s/templates/: cronjob_template.yaml  job_template.yaml
